[package]
name = "tsunagi"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
description = "macOS-Android bridge daemon"
license = "MIT"
repository = "https://github.com/pleme-io/tsunagi"

[[bin]]
name = "tsunagi"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[lints.clippy]
pedantic = "warn"
